Small bugfix for the first released version.

--- a/options/options.html
+++ b/options/options.html
@@ -38,9 +38,9 @@
             </div>
 
             <div id="rightContent">
-                <div id="tabKiller">
-                    <div class="functionName">TabKiller statistics</div>
-                    <div id="tabKillerTable" class="tableRowText">
+                <div id="tabKillerTable">
+                    <div class="functionName">Tab Killer statistics</div>
+                    <div id="blockedHostnames" class="tableRowText">
                         <div class="rowData">
                             <div>Hostnames blocked</div>
                             <div id="blockedHostnamesCounter" class="fieldValue"></div>
